Revert "Update ex1-4.html"
This reverts commit 3ec0b49fdb72e7c19012e3ae439a5d9b7aa76fab.

--- a/ex1-4.html
+++ b/ex1-4.html
@@ -3,9 +3,9 @@
     <body>
         <h1>연습문제1-3</h1>
         <script>
-            var a = prompt('원하는 문자를 입력해주세요.')
+            var a = prompt('원하는 문자열을 입력해주세요.')
             console.log("입력한 문자는 " + "'" + a + "'" + "입니다.")
-            console.log('입력한 문자의 길이는 ' + a.length + '입니다.')
+            console.log('입력한 문자열의 길이는 ' + a.length + '입니다.')
         </script>
     </body>
 </head>
